--- a/.github/workflows/build-datasette.yml
+++ b/.github/workflows/build-datasette.yml
@@ -38,8 +38,9 @@ jobs:
         
       - name: Commit and push build_log.txt
         run: |-
-          git config --global user.email "build-script-bot@example.com"
-          git config --global user.name "README-bot"
-          git add README.md && git commit -m "Datasette website updated - see build_log.txt"
+          git config --global user.email build-script-bot@github.com
+          git config --global user.name build-script-bot
+          git add build_log.txt
+          git commit -m "Datasette website updated - see build_log.txt"
           git push
         
