added cd to build worflow file

--- a/.github/workflows/build-datasette.yml
+++ b/.github/workflows/build-datasette.yml
@@ -26,13 +26,9 @@ jobs:
         with:
           python-version: 3.9.5
         
-      - name: check dir contents
-        run: |
-          dir
-        shell: cmd      
-        
       - name: Run update file
-        run: |
+        run: |-
+          cd RedRecord
           build_script.bat > build_log.txt
         shell: cmd
         
