added bash runability

--- a/.github/workflows/build-datasette.yml
+++ b/.github/workflows/build-datasette.yml
@@ -27,7 +27,8 @@ jobs:
           python-version: 3.9.5
         
       - name: Run update file
-        run: |
+        run: |-
+          chmod +x build_script.sh
           build_script.sh > build_log.txt
         shell: bash
         
