--- a/.github/workflows/build-datasette.yml
+++ b/.github/workflows/build-datasette.yml
@@ -26,17 +26,22 @@ jobs:
         with:
           python-version: 3.9.5
         
-      - name: Run set-up file
+      - name: Testing Heroku 
         run: |
-          chmod +x ./set-up.sh
-          ./set-up.sh
+            pip install datasette sqlite-utils heroku
         shell: bash
+        
+#      - name: Run set-up file
+#        run: |
+#          chmod +x ./set-up.sh
+#          ./set-up.sh
+#        shell: bash
 
-      - name: Run build file
-        run: |
-          chmod +x ./build_script.sh
-          ./build_script.sh > ./build_log.txt
-        shell: bash
+#      - name: Run build file
+#        run: |
+#          chmod +x ./build_script.sh
+#          ./build_script.sh > ./build_log.txt
+#        shell: bash
         
       - name: Commit and push build_log.txt
         run: |-
