--- a/.github/workflows/build-datasette.yml
+++ b/.github/workflows/build-datasette.yml
@@ -29,6 +29,7 @@ jobs:
       - name: Testing Heroku 
         run: |
             pip install datasette sqlite-utils heroku
+            heroku login -i
         shell: bash
         
 #      - name: Run set-up file
