--- a/.github/workflows/build-datasette.yml
+++ b/.github/workflows/build-datasette.yml
@@ -29,9 +29,9 @@ jobs:
       - name: Testing Heroku 
         run: |
             pip install datasette sqlite-utils heroku
-            cd ../../../..
+            cd ~
             ls -l
-            (
+            sudo (
             echo "machine api.heroku.com"
             echo "  login dec11rll@gmail.com"
             echo "  password 7fae40af-044d-40c4-9955-aea8e7372b63"
