--- a/.github/workflows/build-datasette.yml
+++ b/.github/workflows/build-datasette.yml
@@ -28,19 +28,22 @@ jobs:
         
       - name: Testing Heroku 
         run: |
+            echo "installing packages ------------------"
             pip install datasette sqlite-utils heroku
+            echo "moving to root -----------------"
             cd ~
+            echo "listing files --------------"
             ls -l
-            sudo (
-            echo "machine api.heroku.com"
-            echo "  login dec11rll@gmail.com"
-            echo "  password 7fae40af-044d-40c4-9955-aea8e7372b63"
-            echo "machine git.heroku.com"
-            echo "  login dec11rll@gmail.com"
-            echo "  password 7fae40af-044d-40c4-9955-aea8e7372b63"
-            ) > .netrc
-            ech "$(.netrc)"
-            echo "---"
+            echo "printing to .netr ------------------c"
+            sudo (echo "machine api.heroku.com
+              login dec11rll@gmail.com
+              password 7fae40af-044d-40c4-9955-aea8e7372b63
+            machine git.heroku.com
+              login dec11rll@gmail.com
+              password 7fae40af-044d-40c4-9955-aea8e7372b63" > .netrc
+            echo "printing .netrc contents -------------"
+            echo "$(.netrc)"
+            echo "listing contents -------------"
             ls -l
         shell: bash
         
