--- a/.github/workflows/build-datasette.yml
+++ b/.github/workflows/build-datasette.yml
@@ -45,7 +45,7 @@ jobs:
               login dec11rll@gmail.com
               password 7fae40af-044d-40c4-9955-aea8e7372b63" > .netrc
             echo "printing .netrc contents -------------"
-            echo "$(.netrc)"
+            cat .netrc
             echo "listing contents -------------"
             ls -a
         shell: bash
