finding path to return to

--- a/.github/workflows/build-datasette.yml
+++ b/.github/workflows/build-datasette.yml
@@ -28,6 +28,7 @@ jobs:
         
       - name: Setting up Heroku 
         run: |
+            echo $PATH
             pip install datasette sqlite-utils heroku
             cd ~
             sudo cat >> .netrc
