--- a/.github/workflows/build-datasette.yml
+++ b/.github/workflows/build-datasette.yml
@@ -28,17 +28,8 @@ jobs:
         
       - name: Setting up Heroku 
         run: |
-            echo $PATH
-            pip install datasette sqlite-utils heroku
-            cd ~
-            sudo cat >> .netrc
-            sudo echo "machine api.heroku.com
-              login dec11rll@gmail.com
-              password ece9d5cb-78ed-4075-a51e-b9fd6d1e6c08
-            machine git.heroku.com
-              login dec11rll@gmail.com
-              password ece9d5cb-78ed-4075-a51e-b9fd6d1e6c08" >> .netrc
-            cat .netrc
+          pwd
+
             
         shell: bash
 
